ui design staff service

--- a/html/doctors.html
+++ b/html/doctors.html
@@ -74,7 +74,7 @@
               <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="doctors.html">Doctors</a>
+              <a class="nav-link" href="doctors.html">Staff Service</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="blog.html">News</a>
@@ -97,10 +97,10 @@
         <nav aria-label="Breadcrumb">
           <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Doctors</li>
+            <li class="breadcrumb-item active" aria-current="page">Staff</li>
           </ol>
         </nav>
-        <h1 class="font-weight-normal">Our Doctors</h1>
+        <h1 class="font-weight-normal">Our Staff Details</h1>
       </div> <!-- .container -->
     </div> <!-- .banner-section -->
   </div> <!-- .page-banner -->
@@ -113,39 +113,173 @@
 
             <div class="row">
               <div class="col-lg-12 py-3 wow zoomIn">
+                <div class="card">
+                  <div class="card-header">
+                    <p class="font-weight-bold">Doctors</p>
+                  </div>
                 <table class="table table-striped">
                       <thead>
                         <tr>
                           <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Last</th>
-                          <th scope="col">Handle</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Hospital</th>
+                          <th scope="col">Contact No</th>
+                          <th scope="col">Specialists</th>
+                          <th scope="col"></th>
+                          <th scope="col"></th>
+                          <th scope="col"></th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
                           <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
+                          <td>Dr.Kamal</td>
+                          <td>KDU</td>
+                          <td>071887787</td>
+                          <td>ENT</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
                         </tr>
                         <tr>
                           <th scope="row">2</th>
-                          <td>Jacob</td>
-                          <td>Thornton</td>
-                          <td>@fat</td>
+                          <td>Dr.Nimal</td> 
+                          <td>KDU</td>
+                          <td>0768867678</td>
+                          <td>Dermatologists</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
                         </tr>
                         <tr>
                           <th scope="row">3</th>
-                          <td>Larry</td>
-                          <td>the Bird</td>
-                          <td>@twitter</td>
+                          <td>Dr.Ishan Lanthra</td>
+                          <td>KDU</td>
+                          <td>0756655665</td>
+                          <td>Ophthalmologists</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
                         </tr>
                       </tbody>
                     </table>
+                  </div>
               </div>
             </div>
 
+
+            <div class="row">
+              <div class="col-lg-12 py-3 wow zoomIn">
+                <div class="card">
+                  <div class="card-header">
+                    <p class="font-weight-bold">Nurses</p>
+                  </div>
+                <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Hospital</th>
+                          <th scope="col">Contact No</th>
+                          <th scope="col">Ward</th>
+                          <th scope="col"></th>
+                          <th scope="col"></th>
+                          <th scope="col"></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>Tharaki</td>
+                          <td>KDU</td>
+                          <td>071887787</td>
+                          <td>No1</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>Kishara</td> 
+                          <td>KDU</td>
+                          <td>0768867678</td>
+                          <td>No2</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td>Lasan</td>
+                          <td>KDU</td>
+                          <td>0756655665</td>
+                          <td>No2</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-lg-12 py-3 wow zoomIn">
+                <div class="card">
+                  <div class="card-header">
+                    <p class="font-weight-bold">Attendant</p>
+                  </div>
+                <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Hospital</th>
+                          <th scope="col">Contact No</th>
+                          <th scope="col">Specialists</th>
+                          <th scope="col"></th>
+                          <th scope="col"></th>
+                          <th scope="col"></th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>Kamal Ariyarathne</td>
+                          <td>KDU</td>
+                          <td>071887787</td>
+                          <td>ENT</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>Nimal Perera</td> 
+                          <td>KDU</td>
+                          <td>0768867678</td>
+                          <td>##########</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td>Thilini Perera</td>
+                          <td>KDU</td>
+                          <td>0756655665</td>
+                          <td>##########</td>
+                          <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
+                          <td> <a href="#" className="btn"> Update </a> </td>
+                          <td> <a href="#" className="btn" >Delete</a> </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+              </div>
+            </div>
 <!--           <div class="row">
             
             <div class="col-md-6 col-lg-4 py-3 wow zoomIn">
