--- a/html/existing_patient_details.html
+++ b/html/existing_patient_details.html
@@ -57,17 +57,26 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
+          <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Hospital
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="medical billing and claims.html">Medical Billing & Claims</a>
+          <a class="dropdown-item" href="ward_management.html">Ward Management</a>
+          <a class="dropdown-item" href="medical_schedule.html">Medical Schedule</a>
+      </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Hospital</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Staff</a>
+            <a class="nav-link" href="staff.html">Staff</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Patient</a>
+            <a class="nav-link" href="patients.html">Patient</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Laboratory</a>
+            <a class="nav-link" href="lab.html">Laboratory</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pharmacy.html">Pharmacy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -200,6 +209,7 @@
 </div>
 
 
+
 <!-- Footer Open -->
 <footer class="page-footer">
   <div class="container">
@@ -224,8 +234,8 @@
       <div class="col-sm-6 col-lg-3 py-3">
         <h5>Patient Information</h5>
         <ul class="footer-menu">
-          <li><a href="#">Medical History</a></li>
-          <li><a href="#">Existing Patient Information</a></li>
+          <li><a href="medical_history.html">Medical History</a></li>
+          <li><a href="existing_patient_details.html">Existing Patient Information</a></li>
           <li><a href="past_patients.html">Past Patient Information</a></li>
           <li><a href="#">Notice of Privacy Practices</a></li>
         </ul>
