--- a/html/medical_history.html
+++ b/html/medical_history.html
@@ -25,63 +25,71 @@
 </head>
 <body>
 
-  <!-- Header Open-->
-  <header>
-    <div class="topbar">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 text-sm">
-            <div class="site-info">
-              <a href="#"><span class="mai-call text-primary"></span> +94 11 204 4555</a>
-              <span class="divider">|</span>
-              <a href="#"><span class="mai-mail text-primary"></span> uhkdu@kdu.ac.lk</a>
-            </div>
+ <!-- Header Open-->
+ <header>
+  <div class="topbar">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 text-sm">
+          <div class="site-info">
+            <a href="#"><span class="mai-call text-primary"></span> +94 11 204 4555</a>
+            <span class="divider">|</span>
+            <a href="#"><span class="mai-mail text-primary"></span> uhkdu@kdu.ac.lk</a>
           </div>
-          <div class="col-sm-4 text-right text-sm">
-            <div class="social-mini-button">
-              <a href="https://www.facebook.com/University-Hospital-KDU-1745027225787208"><span class="mai-logo-facebook-f"></span></a>
-              <a href="#"><span class="mai-logo-twitter"></span></a>
-              <a href="#"><span class="mai-logo-instagram"></span></a>
-            </div>
+        </div>
+        <div class="col-sm-4 text-right text-sm">
+          <div class="social-mini-button">
+            <a href="https://www.facebook.com/University-Hospital-KDU-1745027225787208"><span class="mai-logo-facebook-f"></span></a>
+            <a href="#"><span class="mai-logo-twitter"></span></a>
+            <a href="#"><span class="mai-logo-instagram"></span></a>
           </div>
         </div>
       </div>
-    </div> 
+    </div>
+  </div> 
 
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-     <img src="../assets/img/KDU Knowledge Store-logos_transparent.png" alt="uhkdu" width = "150px" >
-     <img src="../assets/img/uhkdu_text.png" alt="uhkdu" width = "500px">
-     <div class="container">
-      <div class="collapse navbar-collapse" id="navbarSupport">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Hospital</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Staff</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Patient</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Laboratory</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-primary ml-lg-3" href="#">Sign In</a>
-          </li>
-        </ul>
-      </div>
-    </div> 
-  </nav>
+  <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+   <img src="../assets/img/KDU Knowledge Store-logos_transparent.png" alt="uhkdu" width = "150px" >
+   <img src="../assets/img/uhkdu_text.png" alt="uhkdu" width = "500px">
+   <div class="container">
+    <div class="collapse navbar-collapse" id="navbarSupport">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+         <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Hospital
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="medical billing and claims.html">Medical Billing & Claims</a>
+          <a class="dropdown-item" href="ward_management.html">Ward Management</a>
+          <a class="dropdown-item" href="medical_schedule.html">Medical Schedule</a>
+      </li>
+        <li class="nav-item">
+          <a class="nav-link" href="staff.html">Staff</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="patients.html">Patient</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="lab.html">Laboratory</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pharmacy.html">Pharmacy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-primary ml-lg-3" href="#">Sign In</a>
+        </li>
+      </ul>
+    </div>
+  </div> 
+</nav>
 </header>
 <!-- Header Close -->
-
 <div class="page-banner overlay-dark bg-image" style="background-image: url(../assets/img/medical_historyBG.jpg);">
   <div class="banner-section">
     <div class="container text-center wow fadeInUp">
@@ -227,6 +235,7 @@
 </div> 
 
 
+
 <!-- Footer Open -->
 <footer class="page-footer">
   <div class="container">
@@ -251,8 +260,8 @@
       <div class="col-sm-6 col-lg-3 py-3">
         <h5>Patient Information</h5>
         <ul class="footer-menu">
-          <li><a href="#">Medical History</a></li>
-          <li><a href="#">Existing Patient Information</a></li>
+          <li><a href="medical_history.html">Medical History</a></li>
+          <li><a href="existing_patient_details.html">Existing Patient Information</a></li>
           <li><a href="past_patients.html">Past Patient Information</a></li>
           <li><a href="#">Notice of Privacy Practices</a></li>
         </ul>
