--- a/html/medical_schedule.html
+++ b/html/medical_schedule.html
@@ -19,10 +19,15 @@
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
 
   <link rel="stylesheet" href="../assets/css/theme.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <script src="../assets/js/bootstrap.min.js"></script> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
 
- <!-- Header Open-->
+
+    <!-- Header Open-->
  <header>
   <div class="topbar">
     <div class="container">
@@ -89,44 +94,59 @@
 </nav>
 </header>
 <!-- Header Close -->
+<div class="container">
+    <div class="table-wrapper">
+    <h1 class="text-center">Medical Scheduling </h1>
+    <!-- Table Data -->
+    <div class="container">
+        <hr>
+        <input type="text" id="myInput" onkeyup='tableSearch()' placeholder="Doctor name">
 
-
-<div class="page-banner overlay-dark bg-image" style="background-image: url(../assets/img/bg_image_1.jpg);">
-  <div class="banner-section">
-    <div class="container text-center wow fadeInUp">
-      <h1 class="font-weight-normal">Contact</h1>
+        <table class="table" id="myTable" data-filter-control="true" data-show-search-clear-button="true">
+		<thead>
+            <tr>
+                <th>Specialization</th>
+                <th>Doctor</th>
+                <th>Hospital</th>
+				<th>Dr.Specialise</th>
+            </tr>
+		</thead>
+		<thead>
+            <tr>
+                <td>Skin</td>
+                <td>Dr Lasantha</td>
+                <td>Nawaloka</td>
+				<td>OPD</td>
+            </tr>
+		</thead>
+		<thead>
+            <tr>
+                <td>Brain</td>
+                <td>Dr chaminda</td>
+                <td>Apalo</td>
+				<td>OPD</td>
+            </tr>
+		</thead>
+		<thead>
+            <tr>
+                <td>Fever</td>
+                <td>Kavindu</td>
+                <td>Leesons Hospital</td>
+				<td>ICU</td>
+            </tr>
+		</thead>
+		<thead>
+            <tr>
+                <td>Brain</td>
+                <td>Nimesh</td>
+                <td>Ragama Hospital</td>
+				<td>OPD</td>
+            </tr>
+        </thead>
+        </table>
+    </div>
+	</div>
     </div> 
-  </div> 
-</div> 
-<div class="page-section">
-  <div class="container">
-    <h1 class="text-center wow fadeInUp">Get in Touch</h1>
-
-    <form class="contact-form mt-5">
-      <div class="row mb-3">
-        <div class="col-sm-6 py-2 wow fadeInLeft">
-          <label for="fullName">Name</label>
-          <input type="text" id="fullName" class="form-control" placeholder="Full name..">
-        </div>
-        <div class="col-sm-6 py-2 wow fadeInRight">
-          <label for="emailAddress">Email</label>
-          <input type="text" id="emailAddress" class="form-control" placeholder="Email address..">
-        </div>
-        <div class="col-12 py-2 wow fadeInUp">
-          <label for="subject">Subject</label>
-          <input type="text" id="subject" class="form-control" placeholder="Enter subject..">
-        </div>
-        <div class="col-12 py-2 wow fadeInUp">
-          <label for="message">Message</label>
-          <textarea id="message" class="form-control" rows="8" placeholder="Enter Message.."></textarea>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary wow zoomIn">Send Message</button>
-    </form>
-  </div>
-</div>
-
-
 
 <!-- Footer Open -->
 <footer class="page-footer">
@@ -187,11 +207,30 @@
 </div>
 </footer>
 <!-- Footer Close -->
+    <script type="application/javascript">
+        function tableSearch() {
+            let input, filter, table, tr, td, txtValue;
 
+            //Intialising Variables
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("myTable");
+            tr = table.getElementsByTagName("tr");
 
+            for (let i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
 
-
-
+        }
+    </script>
 <script src="../assets/js/jquery-3.5.1.min.js"></script>
 
 <script src="../assets/js/bootstrap.bundle.min.js"></script>
@@ -204,7 +243,6 @@
 
 <script src="../assets/js/theme.js"></script>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
 
 </body>
 </html>
