--- a/html/viewAttendence.html
+++ b/html/viewAttendence.html
@@ -29,10 +29,10 @@
     <div className="row mt-3">
       <div className="col-lg-12">
         <div class="sidebar-block">
-          <h3 class="sidebar-title">Find the Doctors</h3>
+          <h3 class="sidebar-title">Find the Attendant</h3>
           <form action="#" class="search-form">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Doctors Name">
+              <input type="text" class="form-control" placeholder="Attendant Name">
               <button type="submit" class="btn"><span class="icon mai-search"></span></button>
             </div>
           </form>
@@ -48,19 +48,17 @@
                     <th scope="col">Contact Number</th>
                     <th scope="col">Age</th>
                     <th scope="col">Email</th>
-                    <th scope="col">Specialists</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Kamal</td>
-                    <td>Ariyarathna</td>
+                    <td>Nimal</td>
+                    <td>Perera</td>
                     <td>KDU</td>
                     <td>0112233234</td>
                     <td>30</td>
-                    <td>kamal@gmail.com</td>
-                    <td>ENT</td>
+                    <td>nimal@gmail.com</td>
                   </tr>
                 </tbody>
               </table>
