--- a/html/Pharmacy.html
+++ b/html/Pharmacy.html
@@ -338,7 +338,7 @@
           
           
           <div class="col-md-6">
-            <a href="file:///C:/Users/HP/Desktop/Pharmacy/html/form.html"> 
+            <a href="form.html"> 
               <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">Generate Bill</button>
             </a>
           </div>
