--- a/html/lab.html
+++ b/html/lab.html
@@ -102,7 +102,7 @@
          
         </ol>
       </nav>
-      <h1 class="font-weight-normal">Allergy Reports</h1>
+      <h1 class="font-weight-normal">Reports</h1>
     </div>
   </div> 
 </div> 
@@ -121,7 +121,7 @@
         </div>
       </form>
       <br><br>       
-      <a href="file:///C:/Users/Lasan%20Dewpiya/Desktop/Lab/html/createReport.html">	
+      <a href="createReport.html">	
        <button type="button" class="button">
         <span class="button__text">Add</span>
         <span class="button__icon">
