--- a/html/lab.html
+++ b/html/lab.html
@@ -8,7 +8,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>One Health - Medical Center-Reports</title>
+  <title>Reports</title>
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
