--- a/html/viewDoctorsDetails.html
+++ b/html/viewDoctorsDetails.html
@@ -10,7 +10,7 @@
   
     <meta name="copyright" content="UHKDU, https://uhkdu.kdu.ac.lk/">
   
-    <title>Current Patients</title>
+    <title>Doctor Details</title>
   
     <link rel="stylesheet" href="../assets/css/maicons.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.css">
