--- a/html/createReport.html
+++ b/html/createReport.html
@@ -8,7 +8,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>One Health - Medical Center-Create Report</title>
+  <title>Create Report</title>
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
@@ -91,7 +91,17 @@
 </header>
 <!-- Header Close -->
 
-
+<div class="page-banner overlay-dark bg-image" style="background-image: url(../assets/img/cover.jpeg);">
+  <div class="banner-section">
+    <div class="container text-center wow fadeInUp">
+      <nav aria-label="Breadcrumb">
+        <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
+        </ol>
+      </nav>
+      
+    </div>
+  </div>
+</div> 
 
   <div class="testbox">
     <form action="/">
