--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>One Health - Medical Center HTML5 Template</title>
+  <title>Home</title>
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
@@ -93,7 +93,7 @@
     <div class="container text-center wow zoomIn">
       <span class="subhead">Primary care providers work with patients </span>
       <h1 class="display-6">OVER A LIFETIME AND ARE THE FIRST STOP TO MORE SPECIALIZED CARE.</h1>
-      <a href="#" class="btn btn-primary">Let's Consult</a>
+      <a href="#" class="btn btn-primary">Explore</a>
     </div>
   </div>
 </div>
@@ -237,7 +237,7 @@
 
 <div class="page-section">
   <div class="container">
-    <h1 class="text-center wow fadeInUp">Make an Appointment</h1>
+    <h1 class="text-center wow fadeInUp">Emergency Contact</h1>
 
     <form class="main-form">
       <div class="row mt-5 ">
