--- a/html/medical billing and claims.html
+++ b/html/medical billing and claims.html
@@ -12,7 +12,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>One Health - Medical Center HTML5 Template</title>
+  <title>Billing & Claims</title>
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
