--- a/html/staff.html
+++ b/html/staff.html
@@ -142,7 +142,7 @@
                       <td>071887787</td>
                       <td>ENT</td>
                       <td> <a href="viewDoctorsDetails.html" className="btn"> View </a> </td>
-                      <td> <a data-toggle="modal" data-target=".bd-example-modal-lg" className="btn"> Update </a> </td>
+                      <td> <a href="" data-toggle="modal" data-target=".bd-example-modal-lg" className="btn"> Update </a> </td>
                       <td> <a href="#" className="btn">Delete</a> </td>
                     </tr>
                     <tr>
@@ -152,7 +152,7 @@
                       <td>0768867678</td>
                       <td>Dermatologists</td>
                       <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
-                      <td> <a data-toggle="modal" data-target=".bd-example-modal-lg" className="btn"> Update </a> </td>
+                      <td> <a href="" data-toggle="modal" data-target=".bd-example-modal-lg" className="btn"> Update </a> </td>
                       <td> <a href="#" className="btn">Delete</a> </td>
                     </tr>
                     <tr>
@@ -162,7 +162,7 @@
                       <td>0756655665</td>
                       <td>Ophthalmologists</td>
                       <td> <a href="vewDoctorsDetails.html" className="btn"> View </a> </td>
-                      <td> <a data-toggle="modal" data-target=".bd-example-modal-lg" className="btn"> Update </a> </td>
+                      <td> <a href="" data-toggle="modal" data-target=".bd-example-modal-lg" className="btn"> Update </a> </td>
                       <td> <a href="#" className="btn">Delete</a> </td>
                     </tr>
                   </tbody>
@@ -205,7 +205,7 @@
                       <td>071887787</td>
                       <td>No1</td>
                       <td> <a href="viewNures.html" className="btn"> View </a> </td>
-                      <td> <a data-toggle="modal" data-target=".NS-example-modal-lg" className="btn"> Update </a> </td>
+                      <td> <a href="" data-toggle="modal" data-target=".NS-example-modal-lg" className="btn"> Update </a> </td>
                       <td> <a href="#" className="btn">Delete</a> </td>
                     </tr>
                     <tr>
@@ -215,7 +215,7 @@
                       <td>0768867678</td>
                       <td>No2</td>
                       <td> <a href="viewNures.html" className="btn"> View </a> </td>
-                      <td> <a href="#" className="btn"> Update </a> </td>
+                      <td> <a  href="" data-toggle="modal" data-target=".NS-example-modal-lg" className="btn"> Update </a> </td>
                       <td> <a href="#" className="btn">Delete</a> </td>
                     </tr>
                     <tr>
@@ -225,7 +225,7 @@
                       <td>0756655665</td>
                       <td>No2</td>
                       <td> <a href="viewNures.html" className="btn"> View </a> </td>
-                      <td> <a href="#" className="btn"> Update </a> </td>
+                      <td> <a  href="" data-toggle="modal" data-target=".NS-example-modal-lg" className="btn"> Update </a> </td>
                       <td> <a href="#" className="btn">Delete</a> </td>
                     </tr>
                   </tbody>
